# AzureIoTGatewaySDKExtention

./: README.md  dependencies.cmake
core/inc/: gateway.h
core/src/: broker.c  gateway_createfromjson.c  gateway_internal.c
modules/: CMakeLists.txt  Readme.md
modules/ble/src/: ble.c  ble_instr_utils.c  bleio_seq_linux.c
modules/common/: messageproperties.h
modules/filter/: CMakeLists.txt  README.md
modules/filter/inc/: filter.h  filter_api.h
modules/filter/src/: filter.c
modules/httprestapi/: CMakeLists.txt
modules/httprestapi/httprestserver/: CMakeLists.txt  httprestserver.cpp  httprestserver.h
modules/httprestapi/src/: httprestapi.c
modules/identitymap/src/: identitymap.c
modules/iothub/src/: iothub.c
modules/resolver/ticc2541/: CMakeLists.txt
modules/resolver/ticc2541/inc/: ticc2541.h
modules/resolver/ticc2541/src/: ticc2541.c
modules/resolver/ticc2650/: CMakeLists.txt
modules/resolver/ticc2650/inc/: ticc2650.h
modules/resolver/ticc2650/src/: ticc2650.c
samples/: CMakeLists.txt
samples/ble_filter_gateway/: CMakeLists.txt  README.md
samples/ble_filter_gateway/filters/: CMakeLists.txt
samples/ble_filter_gateway/filters/ticc2541/: CMakeLists.txt  README.md
samples/ble_filter_gateway/filters/ticc2541/inc/: ticc2541.h
samples/ble_filter_gateway/filters/ticc2541/src/: ticc2541.c
samples/ble_filter_gateway/filters/ticc2650/: CMakeLists.txt  README.md
samples/ble_filter_gateway/filters/ticc2650/inc/: ticc2650.h
samples/ble_filter_gateway/filters/ticc2650/src/: ticc2650.c
samples/ble_filter_gateway/src/: gateway_filter_cc2650.json
samples/ble_json_gateway/: CMakeLists.txt
samples/ble_json_gateway/src/: gateway_sample_cc2541.json  gateway_sample_cc2650.json  readme.md
samples/filter_sample/: CMakeLists.txt  README.md
samples/filter_sample/src/: filtersample_lin.json  filtersample_win.json
samples/httprestapi_sample/: readme.md
samples/mixed_lang_proc_sample/: README.md  gateway_mixed_sample.json  index.js
utility/remoteupdateutil/: Program.cs  README.md  remoteupdateutil.csproj
